log/build_2021-12-04_17-17-58/robotTools/stderr.log
  File "/home/worbots/BasherROSWorkspace/install/robotTools/lib/python3.8/site-packages/robotTools/IMUCovarCalc.py", line 32
    def listener_callback(self, msg)
                                   ^
SyntaxError: invalid syntax

